<resources>
    <string name="app_name">SLUPUPApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">SLAP-UP\nFOOD</string>
    <string name="menu_bonus">SP</string>
    <string name="txt_set">Сеты</string>
    <string name="txt_rol">Ролы</string>
    <string name="txt_sush">Суши</string>
    <string name="txt_napit">Напитки</string>
</resources>